Duong | Update | tính năng đăng ký đăng nhập

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@nestjs/websockets": "^8.4.4",
     "@socket.io/redis-adapter": "^7.1.0",
     "apollo-server-express": "^3.6.7",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
@@ -62,6 +63,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "sha512-crypt-ts": "^0.1.27",
     "socket.io": "^4.4.1",
     "socket.io-client": "^4.4.1",
     "typeorm": "^0.2.45"
